# minecraftmanager

./: .gitignore  Cargo.toml  README.md  config.example.json  install.sh  mcm  mcm.js  package-lock.json  package.json  readme.md  requirements.txt  server_manager.py  tailwind.config.js  test_fifo  test_fifo.rs  test_pty  test_pty.rs  test_tail.rs  web.py
app/: globals.css  layout.tsx  page.tsx
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ConsoleModal.tsx  ServerCard.tsx  SystemMetricsChart.tsx
frontend/app/types/: index.ts
lib/: server-manager-cli.js  server-manager.ts
mc-node-agent/: Cargo.toml
mc-node-agent/src/: config.rs  main.rs  process.rs  state.rs
public/: app.js  index.html  style.css
src/: api.rs  config.rs  main.rs  process.rs  state.rs
templates/: index.html
