[package]
name = "mc-node-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mc-node-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
sysinfo = "0.30"
nix = { version = "0.29", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
futures-util = "0.3"
